--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "author": "Simon Sommer",
   "main": "dist/index.cjs.js",
   "browser": "dist/index.umd.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.esm.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
     "watch": "rollup --config --watch",
     "build": "rollup --config",
-    "test": "node test/test.js"
+    "test": "node test/test.mjs"
   },
   "keywords": [
     "compiler",
